[gd_scene load_steps=2 format=3 uid="uid://bua3nrp5jqp6c"]

[ext_resource type="Script" uid="uid://cehtnlclysp8y" path="res://scenes/prefabs/GemPackageCard.gd" id="1"]

[node name="GemPackageCard" type="PanelContainer"]
custom_minimum_size = Vector2(150, 200)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Icon" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "ðŸ’Ž"
horizontal_alignment = 1

[node name="GemsLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "100 Gems"
horizontal_alignment = 1

[node name="BonusLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "+10 Bonus!"
horizontal_alignment = 1

[node name="PriceLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "$0.99"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "SatÄ±n Al"
